@@ -838,6 +838,16 @@ luxury_randomized_appearance_rate_percent = 100
 ; this number. Raising this setting causes fewer bonus resources to be generated and lowering it increases them. For the standard rate, set to 32.
 tiles_per_non_luxury_resource = 32
 
+; Normally the corruption rate in the capital is fixed at zero. Setting this to true removes that, allowing corruption to appear in the capital. The
+; capital also has a strong inherent bonus reducing corruption so even when this setting is on, it will usually have zero corruption. To reduce that
+; bonus, see the special_capital_decorruption_effect option below.
+allow_corruption_in_capital = false
+
+; Controls the special decorruption bonus that's applied to the capital. This bonus is incorporated into the decorrupting effect from buildings in the
+; city and each point is equivalent in strength to one courthouse. For standard game rules, set to 10. This option does nothing unless
+; allow_corruption_in_capital is set to true. Min value 0, max 100.
+special_capital_decorruption_effect = 10
+
 [==================]
 [=== AESTHETICS ===]
 [==================]
